# GLoops

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
example/resources/shaders/: texture3D_sdf.frag  texture3D_slice.frag  voxel_grid_raymarching.frag
example/ressources/shaders/: voxel_grid_raymarching.frag
extlibs/: .gitignore
extlibs/imgui-master/: imconfig.h
extlibs/stb_image/: stb_image.h
gloops/: Camera.cpp  Camera.hpp  Debug.cpp  Debug.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  Mesh.cpp  Mesh.hpp  Raycasting.cpp  Raycasting.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Utils.cpp  Utils.hpp  Window.cpp  Window.hpp  config.hpp  config_imgui.hpp
gloops/shaders/: basic.frag  basic.vert  coloredMesh.frag  coloredMesh.vert  phong.frag  phong.vert  test.frag  texturedMesh.frag  texturedMesh.vert
