project (GLoops)
cmake_minimum_required(VERSION 3.1)

# EXTLIBS
set(GLOOPS_EXTLIBS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/extlibs/")

### STB
set(STB_PATH "${GLOOPS_EXTLIBS_PATH}/stb/")

### EIGEN
set(GLOOPS_EIGEN_PATH "${GLOOPS_EXTLIBS_PATH}/eigen/")


### GLFW
set(GLOOPS_GLFW_PATH "${GLOOPS_EXTLIBS_PATH}/glfw/")
set(GLOOPS_GLFW_INCLUDE "${GLOOPS_GLFW_PATH}/include/")
set(GLFW_BUILD_DOCS OFF CACHE BOOL "")
set(GLFW_BUILD_TESTS OFF CACHE BOOL "")
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "")
set(GLFW_INSTALL OFF CACHE BOOL "")
set(GLFW_DOCUMENT_INTERNALS OFF CACHE BOOL "")
add_subdirectory(${GLOOPS_GLFW_PATH})

### GLAD
set(GLOOPS_GLAD_INCLUDE "${GLOOPS_EXTLIBS_PATH}/glad/include/")
set(GLOOPS_GLAD_SRC "${GLOOPS_EXTLIBS_PATH}/glad/src/glad.c")

### IMGUI
set(GLOOPS_IMGUI_PATH "${GLOOPS_EXTLIBS_PATH}/imgui/")
file(GLOB GLOOPS_IMGUI_HEADERS "${GLOOPS_IMGUI_PATH}/*.h"
	"${GLOOPS_IMGUI_PATH}/examples/imgui_impl_glfw.h"
	"${GLOOPS_IMGUI_PATH}/examples/imgui_impl_opengl3.h")
file(GLOB GLOOPS_IMGUI_SRC "${GLOOPS_IMGUI_PATH}/*.cpp"
	"${GLOOPS_IMGUI_PATH}/examples/imgui_impl_glfw.cpp"
	"${GLOOPS_IMGUI_PATH}/examples/imgui_impl_opengl3.cpp")
set(GLOOPS_IMGUI_INCLUDE ${GLOOPS_IMGUI_PATH})

### EMBREE 
set(GLOOPS_EMBREE_PATH "${GLOOPS_EXTLIBS_PATH}/embree/")
set(EMBREE_STATIC_LIB ON CACHE BOOL "")
set(EMBREE_BACKFACE_CULLING ON CACHE BOOL "")
set(EMBREE_TASKING_SYSTEM CACHE STRING "INTERNAL")
set(EMBREE_ISPC_SUPPORT OFF CACHE BOOL "")
set(EMBREE_TUTORIALS OFF CACHE BOOL "")
add_subdirectory(${GLOOPS_EMBREE_PATH})
set(GLOOPS_EMBREE_INCLUDE "${GLOOPS_EMBREE_PATH}/include/")

### ASSIMP
set(GLOOPS_ASSIMP_PATH "${GLOOPS_EXTLIBS_PATH}/assimp/")
add_subdirectory(${GLOOPS_ASSIMP_PATH})

# GLOOPS SETUP
set(GLOOPS_SRC_PATH "${CMAKE_CURRENT_SOURCE_DIR}/gloops/")
set(GLOOPS_FILES ${GLOOPS_HEADERS} ${GLOOPS_SRC} PARENT_SCOPE)
file(GLOB GLOOPS_HEADERS "${GLOOPS_SRC_PATH}*.hpp")
file(GLOB GLOOPS_SRC "${GLOOPS_SRC_PATH}*.cpp" )

add_library(GLoops STATIC ${GLOOPS_SRC} ${GLOOPS_HEADERS} ${GLOOPS_GLAD_SRC} 
	${GLOOPS_IMGUI_SRC} ${GLOOPS_IMGUI_HEADERS})

target_include_directories(GLoops PUBLIC . ${GLOOPS_EMBREE_INCLUDE}
	${GLOOPS_GLAD_INCLUDE} ${GLOOPS_EIGEN_PATH} ${GLOOPS_IMGUI_PATH} ${STB_PATH})

add_compile_definitions(GLoops IMGUI_USER_CONFIG=<gloops/config_imgui.hpp>)

target_link_libraries(GLoops PUBLIC
        glfw
        assimp
		embree
)